tests/baselines/reference/downlevelLetConst2.errors.txt
downlevelLetConst2.ts(1,7): error TS1155: 'const' declarations must be initialized.
downlevelLetConst2.ts(1,7): error TS7005: Variable 'a' implicitly has an 'any' type.


==== downlevelLetConst2.ts (2 errors) ====
    const a
          ~
!!! error TS1155: 'const' declarations must be initialized.
          ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.